# OpenGL-Cpp-2

./: CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  notes.txt
platform/: build.bat  build.sh
source/: App.h  Camera.cpp  Camera.h  common.h  main.cpp
